*Added an option to automatically save the current configuration on exit. (Found in the User Interface settings dialog)
*The NVDA interface now contains a navigatable text control in the main part of its window, which contains a quick-start document explaining how the User interface works, and also documents many useful NVDA key strokes.

Changes since revision 293:
*Graphics in Mozilla Gecko virtualBuffers are now ignored if they do not have a title / alt attribute.
*Page up and page down in rich edit documents now speak the line that they move to.

Changes since revision 287:
*Support for pages with dynamic content in Mozilla Gekco applications is now complete. Make sure that updateContentDynamically (in the virtualBuffers section of nvda.ini) is set to true for this all to work.
NVDA does not yet automaticlaly read changes, but it does beep when things are being updated. you can arrow around to see what has changed.
*Reading of new text in dos console windows is again much improved.
*NVDA no longer crashes when pressing control+c in dos console windows.
*the speed in which NVDA Loads documents in mozilla gecko windows (such as in Firefox) is now more than doubled.
Example: it used to take around 8 seconds to load www.anz.com but now it takes only 3.
*insert+s used to turn speech on and off, but now it toggles between 3 speech modes: talk, beeps and off.